# fastapi-skeleton

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  README_zh.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 333be6389f09_init_database.py  76da76985207_initial_migration.py
app/: gunicorn_conf.py  main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  security.py
app/crud/: crud_user.py
app/db/: redis.py  session.py
app/middleware/: logger_middleware.py
app/models/: __init__.py  f_attachment.py  f_sys_admin.py  f_sys_casbin_rule.py  f_sys_resource.py  f_sys_role.py  f_sys_role_auth.py  f_users.py  user.py
app/schemas/: user.py
docs/: alembic_workflow.md  deployment.md
scripts/: check_migration.py  create_test_user.py  generate_model.py
tests/: test_redis_login.py
