[project]
name = "fastapi-skeleton"
version = "0.1.0"
description = "FastAPI Skeleton with MySQL, Redis, JWT, and easy architecture"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiomysql>=0.2.0",
    "redis>=5.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "python-multipart>=0.0.6",
    "gunicorn>=21.2.0",
    "alembic>=1.13.1",
    "cryptography>=42.0.0",
    "sqlacodegen>=3.2.0",
]

[project.scripts]
fastapi-skeleton = "app.main:start"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
